--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "author": {
     "name": "Jianyao17",
     "url": "https://github.com/Jianyao17"
-  }
+  },
+  "exclude": [
+    "Tests/**"
+  ]
 }
