Try to Adding Github Test Action

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "displayName": "Improved Timers",
   "description": "Improved Timers System for Unity that hooks into the Unity Player Loops. This is Jianyao17's Personal Implementation of Improved Timers by git-amend",
+  "unity": "2020.3",
   "author": {
     "name": "Jianyao17",
     "url": "https://github.com/Jianyao17"
