--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -18,15 +18,23 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-          
+            
+            
+      # Enable Debug Logging
+      - name: Enable debug logging
+        run: echo "ACTIONS_RUNNER_DEBUG=true" >> $GITHUB_ENV
+        
+        
       # Temporary Copy this repo dir 
       # to new subFolder for testing 
       - name: Copy dir to new dir
         run: |
+          echo "Current directory:"
           pwd
-          folderName=$(echo "${PWD##*/}")
-          rsync -r "$GITHUB_WORKSPACE" "copiedProject" 
-          ls -F "copiedProject/$folderName"
+          rsync -a "$GITHUB_WORKSPACE/" "./copiedProject/"
+          echo "Contents of copiedProject:"
+          ls -la "./copiedProject"
+          
           
       # Test
       - name: Run tests
@@ -42,7 +50,7 @@ jobs:
           unityVersion: '2020.3.0f1'
           checkName: 'PlayMode Test Results'
           coverageOptions: 'generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*'
-          projectPath: './copiedProject/Improved-Timers'
+          projectPath: ./copiedProject
           githubToken: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Upload coverage results
