--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -45,7 +45,7 @@ jobs:
           checkName: 'PlayMode Test Results'
           coverageOptions: 'generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*'
           projectPath: ./copiedProject
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          githubToken: ${{ secrets.ACCESS_TOKEN }}
         
       - name: Upload coverage results
         uses: actions/upload-artifact@v3
