Revert "Fix Github Access Token"
This reverts commit 49afa7ae275e351bca5dadaa0eb2d395da419066.

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -45,7 +45,7 @@ jobs:
           checkName: 'PlayMode Test Results'
           coverageOptions: 'generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*'
           projectPath: ./copiedProject
-          githubToken: ${{ secrets.ACCESS_TOKEN }}
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Upload coverage results
         uses: actions/upload-artifact@v3
